# rawfy

./: .gitignore  CHANGELOG.md  IDEAS.md  LICENSE  README.md  RESEARCH.md  SCOPE.md  SKILL.md  TECHSTACK.md  UI_UX.md  eslint.config.js  implementation_plan.md  package-lock.json  package.json  result.json  result2.json  test-pw.ts  todo-list.md  tsconfig.json  tsup.config.ts  update-interactive.js  vitest.config.ts  vitest.integration.config.ts  work-done.md  workflow.md
.github/workflows/: ci.yml
docs/: antigravity.md  claude-code.md  langchain.md  ollama.md  subprocess.md
evals/: evals.json
python/: README.md  pyproject.toml
python/rawfy/: __init__.py  __main__.py  client.py
python/rawfy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
references/: api-usage.md  cli-usage.md  mcp-usage.md  node-sdk-usage.md
scripts/: validate_rawfy_output.py
src/: cli.ts  cli.ts.patch  index.ts  pipeline.ts  server-api.ts  server-mcp.ts  types.ts
src/extractor/: html-to-md.ts  interactive.ts  metadata.ts  readability.ts
src/fetcher/: index.ts  playwright.ts  static.ts
src/media/: audio.ts  image.ts  pdf.ts  video.ts
src/output/: index.ts  json.ts  rfm.ts  text.ts  wsm.ts
src/utils/: classify.ts  detect.ts  errors.ts  truncate.ts
tests/: setup.ts
tests/extractor/: html-to-md.test.ts  interactive.test.ts  metadata.test.ts  readability.test.ts
tests/fetcher/: router.test.ts  static.test.ts
tests/fixtures/: .gitkeep
tests/integration/: e2e.integration.test.ts  live.integration.test.ts
tests/media/: audio.test.ts  image.test.ts  pdf.test.ts  video.test.ts
tests/output/: json.test.ts  text.test.ts  wsm.test.ts
tests/utils/: detect.test.ts  errors.test.ts  truncate.test.ts
