[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rawfy"
version = "0.1.0"
description = "Python wrapper for the Rawfy AI agent skill — converts any URL into structured, agent-readable content"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "rishiiicreates"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
keywords = ["ai", "agent", "mcp", "web", "scraper", "markdown", "rawfy"]

[project.urls]
Homepage = "https://github.com/rishiiicreates/rawfy"
Repository = "https://github.com/rishiiicreates/rawfy"
Issues = "https://github.com/rishiiicreates/rawfy/issues"

[project.scripts]
rawfy-py = "rawfy.client:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rawfy*"]
